--- a/SAKProtocolManager/packages.config
+++ b/SAKProtocolManager/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net461" />
+  <package id="log4net" version="1.2.10" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4420.1017" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.5.0" targetFramework="net461" />
 </packages>
