--- a/SAKProtocolManager/SAKProtocolManager.csproj
+++ b/SAKProtocolManager/SAKProtocolManager.csproj
@@ -268,6 +268,12 @@
   <ItemGroup>
     <Content Include="icons8-Check-100.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="NormaDBControl\DBControl\NormaDBControl.csproj">
+      <Project>{6828dd40-1488-46d6-8f70-db5ef38c463f}</Project>
+      <Name>NormaDBControl</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
